force-app/main/default/objects/custom_create334__c/custom_create334__c.object-meta.xml
<CustomObject>
    <label>Custom created object334</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects334</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>