force-app/main/default/objects/custom_create334__c/fields/custom_create_334field571__c.field-meta.xml
<CustomField>
    <fullName>custom_create_334field571__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 334field571</label>
    <type>Checkbox</type>
</CustomField>